--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,21 +1,29 @@
 html,
 body {
-  font-family: 'Inter', sans-serif;
-  height: 100%;
+  background-color: $background;
 }
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+  width: calc(100vw - 100px);
+  max-width: 1400px;
+  height: 100%;
+  margin: 50px auto;
+  background-color: $white;
+  border-radius: 10px;
+}
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+
+  &--cart {
+    max-width: 820px;
+    margin: 90px auto;
+  }
 }
 .main {
   flex: 1 0 auto;
 }
 .footer {
   flex: 0 0 auto;
-}
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
 }
