--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -4,6 +4,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Proxima Nova', Roboto, system-ui, Tahoma, sans-serif;
   border: 0;
 }
 *,
@@ -29,8 +30,7 @@ aside {
 html,
 body {
   width: 100%;
-  height: 100%;
-  font-size: 100%;
+  // height: 100%;
   font-size: 14px;
   line-height: 1;
   -ms-text-size-adjust: 100%;
