add categories component

--- a/src/styles/components/_categories.scss
+++ b/src/styles/components/_categories.scss
@@ -21,6 +21,9 @@
     &--active {
       color: $white;
       background-color: #282828;
+      &:hover {
+        background-color: darken(#282828, 5%);
+      }
     }
   }
 }
