add SortPopup component

--- a/src/styles/components/_sort.scss
+++ b/src/styles/components/_sort.scss
@@ -14,6 +14,7 @@
     color: $main;
     border-bottom: 1px dashed $main;
     cursor: pointer;
+    user-select: none;
   }
   &__popup {
     position: absolute;
