--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -58,17 +58,16 @@ button::-moz-focus-inner {
 }
 
 a,
-a:visited {
+a:visited,
+a:hover {
+  color: inherit;
   text-decoration: none;
 }
 
 a:focus,
 a:active {
+  color: inherit;
   outline: none;
-}
-
-a:hover {
-  text-decoration: none;
 }
 
 ul,
