--- a/src/styles/components/_sort.scss
+++ b/src/styles/components/_sort.scss
@@ -6,6 +6,11 @@
   }
   &__icon {
     margin-right: 8px;
+    transform: rotate(180deg);
+
+    &--rotated {
+      transform: rotate(0deg);
+    }
   }
   &__text {
     margin-right: 8px;
@@ -33,12 +38,12 @@
   &__item {
     padding: 12px 20px;
     cursor: pointer;
+    &--active {
+      font-weight: bold;
+    }
     &--active,
     &:hover {
       color: $main;
-      font-weight: bold;
-    }
-    &:hover {
       background: rgba(254, 95, 30, 0.05);
     }
   }
