add new configuration in stylelint, linted all .scss files

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,6 +4,7 @@ $main: #fe5f1e;
 $background: #ffdf8c;
 $text: #7b7b7b;
 $grey: #f9f9f9;
+$darkGrey: #bebebe;
 $lightGrey: #f3f3f3;
 $content: #2c2c2c;
 
