--- a/src/styles/components/_categories.scss
+++ b/src/styles/components/_categories.scss
@@ -1,8 +1,10 @@
 .categories {
   flex: 1 1 auto;
+
   &__inner {
     display: flex;
   }
+
   &__item {
     margin-right: 10px;
     padding: 13px 30px;
@@ -12,18 +14,22 @@
     cursor: pointer;
     transition: background-color 0.1s ease-in-out;
     user-select: none;
+
     &:hover {
-      background-color: darken(#f9f9f9, 2%);
+      background-color: darken($grey, 2%);
     }
+
     &:active {
-      background-color: darken(#f9f9f9, 5%);
+      background-color: darken($grey, 5%);
     }
-    &--active {
-      color: $white;
-      background-color: #282828;
-      &:hover {
-        background-color: darken(#282828, 5%);
-      }
+  }
+
+  .active {
+    color: $white;
+    background-color: #282828;
+
+    &:hover {
+      background-color: darken(#282828, 5%);
     }
   }
 }
