--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -4,11 +4,11 @@
 
   &__inner {
     display: flex;
+    justify-content: space-between;
   }
 
   &__logo {
     display: flex;
-    flex: 1 1 auto;
   }
 
   &__logo-image {
