add loader for Card component, optimized SortPopup/Categiries/Home, fetchPizzas moved to action pizzas.js and add action for loader, reducer pizzas now use switch instead of 'if'

--- a/src/styles/components/_sort.scss
+++ b/src/styles/components/_sort.scss
@@ -46,11 +46,11 @@
     padding: 12px 20px;
     cursor: pointer;
 
-    &--active {
+    &.active {
       font-weight: bold;
     }
 
-    &--active,
+    &.active,
     &:hover {
       color: $main;
       background: rgba(254, 95, 30, 0.05);
