fix bugs, update proxy

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -157,6 +157,10 @@
   margin: 0 auto;
   text-align: center;
 
+  span {
+    display: block;
+  }
+
   &__title {
     margin-bottom: 10px;
     font-weight: bold;
