--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,8 +22,9 @@
 
   &__items {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-items: center;
+    grid-column-gap: 35px;
     row-gap: 65px;
   }
 }
